fix: text-align for menu

--- a/assets/sass/base/_typography.sass
+++ b/assets/sass/base/_typography.sass
@@ -46,6 +46,7 @@ a
   text-transform: uppercase
   font-weight: bold
   display: block
+  text-align: center
   &:hover
     color: rgba($color-dark, 0.6)
 
