--- a/assets/sass/components/_mobile-menu.sass
+++ b/assets/sass/components/_mobile-menu.sass
@@ -23,3 +23,4 @@
         width: 100%
         display: block
         line-height: 1.5
+        text-align: left
